--- a/UUJJ/templates/city/city.html
+++ b/UUJJ/templates/city/city.html
@@ -8,38 +8,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/city.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        .button-container {
-            position: fixed;
-            right: 20px;
-            top: 50%;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .icon-button {
-            width: 80px;
-            height: 80px;
-            border-radius: 10px;
-            background-color: #f0f0f0;
-            border: none;
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-size: 14px;
-            transition: background-color 0.3s;
-        }
-        .icon-button:hover {
-            background-color: #e0e0e0;
-        }
-        .icon-button i {
-            font-size: 24px;
-            margin-bottom: 5px;
-        }
-    </style>
+    
 </head>
 <body>
     <h1>&#127800;대한민국 수도권&#127800;</h1>
@@ -61,11 +30,6 @@
             미술관
         </button>
     </div>
-
-    <script>
-        function showAlert(place) {
-            alert(place + "을 선택하셨습니다.");
-        }
-    </script>
+    <script src="{% static 'js/button_click.js' %}"></script>
 </body>
 </html>
