--- a/UUJJ/static/css/city/city.css
+++ b/UUJJ/static/css/city/city.css
@@ -6,15 +6,15 @@ body, html {
     height: 100%;
     overflow: hidden;
     background:
-        linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
-        url('../../img/background.png') no-repeat center center fixed;
+    linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
+    url('../../img/mc.jpg') no-repeat center center fixed;
     background-size: cover; 
 }
 
 /* Header styles */
 header {
     height: 5vh;
-    color: #BBBBBB;
+    color: #322F20;
     padding: 10px 30px;
     text-align: start;
     display: flex;
@@ -36,6 +36,8 @@ header {
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    transform: scaleX(1.3); /* 가로로 1.5배 늘이기 */
+
 }
 
 /* Button group */
@@ -49,15 +51,15 @@ header {
 
 /* Button images */
 #bts img {
-    margin: 0 15px;
-    width: 180px;
-    height: 180px;
+    margin: 0 30px;
+    width: 230px;
+    height: 230px;
     cursor: pointer;
     transition: transform 0.2s;
 }
 
 #bts img:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 
 /* Bottom line */
@@ -69,9 +71,9 @@ header {
 #bt_line::after {
     content: "";
     display: block;
-    width: 70%;
+    width: 80%;
     height: 6px;
-    background-color: #BBBBBB;
+    background-color: #322F20;
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -82,7 +84,7 @@ header {
 /* Footer styles */
 footer {
     height: 5vh;
-    color: black;
+    color: #322F20;
     padding: 10px 30px;
     text-align: center;
     display: flex;
