--- a/UUJJ/static/css/city/city.css
+++ b/UUJJ/static/css/city/city.css
@@ -1,92 +1,91 @@
 /* Global settings */
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    height: 100%;
-    overflow: hidden;
-    background:
-    linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
-    url('../../img/mc.jpg') no-repeat center center fixed;
-    background-size: cover; 
+body,
+html {
+   margin: 0;
+   padding: 0;
+   font-family: Arial, sans-serif;
+   height: 100%;
+   overflow: hidden;
+   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
+      url("../../img/mc.jpg") no-repeat center center fixed;
+   background-size: cover;
 }
 
 /* Header styles */
 header {
-    height: 5vh;
-    color: #322F20;
-    padding: 10px 30px;
-    text-align: start;
-    display: flex;
-    align-items: center;
+   height: 5vh;
+   color: #322f20;
+   padding: 10px 30px;
+   text-align: start;
+   display: flex;
+   align-items: center;
 }
 
 /* Map container */
 #map-container {
-    width: 100%;
-    height: 60vh;
-    display: flex;
-    justify-content: center;
+   width: 100%;
+   height: 60vh;
+   display: flex;
+   justify-content: center;
 }
 
 /* Map styles */
 #map {
-    width: 60%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    transform: scaleX(1.3); /* 가로로 1.5배 늘이기 */
-
+   width: 60%;
+   height: 100%;
+   margin: 0 auto;
+   display: flex;
+   justify-content: center;
+   transform: scaleX(1.3); /* 가로로 1.5배 늘이기 */
 }
 
 /* Button group */
 #bts {
-    display: flex;
-    height: 20vh;
-    justify-content: center;
-    align-items: center; /* Vertical center alignment */
-    padding: 20px;
+   display: flex;
+   height: 20vh;
+   justify-content: center;
+   align-items: center; /* Vertical center alignment */
+   padding: 20px;
 }
 
 /* Button images */
 #bts img {
-    margin: 0 30px;
-    width: 230px;
-    height: 230px;
-    cursor: pointer;
-    transition: transform 0.2s;
+   margin: 0 30px;
+   width: 230px;
+   height: 230px;
+   cursor: pointer;
+   transition: transform 0.2s;
 }
 
 #bts img:hover {
-    transform: scale(1.2);
+   transform: scale(1.2);
 }
 
 /* Bottom line */
 #bt_line {
-    position: relative;
-    padding-bottom: 10px;
+   position: relative;
+   padding-bottom: 10px;
 }
 
 #bt_line::after {
-    content: "";
-    display: block;
-    width: 80%;
-    height: 6px;
-    background-color: #322F20;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 3px;
+   content: "";
+   display: block;
+   width: 80%;
+   height: 6px;
+   background-color: #322f20;
+   position: absolute;
+   bottom: 0;
+   left: 50%;
+   transform: translateX(-50%);
+   border-radius: 3px;
 }
 
 /* Footer styles */
 footer {
-    height: 5vh;
-    color: #322F20;
-    padding: 10px 30px;
-    text-align: center;
-    display: flex;
-    align-items: center;
+   height: 5vh;
+   color: #322f20;
+   padding: 10px 30px;
+   text-align: center;
+   display: flex;
+   align-items: center;
 }
