--- a/UUJJ/static/css/main/main.css
+++ b/UUJJ/static/css/main/main.css
@@ -1,5 +1,84 @@
-h1{
-    color: red;
-    font-size: 50px;
-    text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Jua&family=Telex&display=swap");
+/* 폰트 전역 설정 */
+body {
+   font-family: "Jua", sans-serif;
+   font-weight: 500;
+   font-style: normal;
+}
+/* 전체 크기, 배경 효과 */
+#all-section {
+   width: 100vw;
+   height: 100vh;
+   background-size: cover;
+   background-position: center;
+   background-image: url(../../img/background.png);
+}
+#middle_section {
+   background-color: rgba(00, 00, 00, 50%);
+}
+/* 각 컨텐츠 크기 */
+/* 머리15 몸통70 카드5 발10 */
+header {
+   height: 15vh;
+}
+#main_con {
+   height: 70vh;
+}
+footer {
+   height: 10vh;
+}
+
+#card {
+   width: 20vw;
+   height: 5vh;
+}
+#card {
+   background-color: rgba(00, 00, 00, 50%);
+   color: #eeeeee;
+}
+/* 로고/홈 버튼 */
+#logo img {
+   width: 5vw;
+}
+/* 버튼 영역 및 호버 */
+#bt_area {
+   width: 500px;
+   height: 400px;
+   margin-top: 10vh;
+   position: relative;
+}
+
+#bt_area > div {
+   transition: transform 0.6s ease;
+   width: 150px;
+   height: 150px;
+}
+/* 호버 */
+#bt_area > div:hover {
+   transform: translateY(-30px);
+}
+#bt_area > div > a > img {
+   height: 250px;
+}
+
+/* div 위치*/
+#Arboretum {
+   z-index: 4;
+   left: 25%;
+   top: 25%;
+}
+#gallery {
+   z-index: 3;
+   left: 50%;
+   top: 10%;
+}
+#spa {
+   z-index: 2;
+   left: 0%;
+   top: 10%;
+}
+#sauna {
+   z-index: 1;
+   top: -5%;
+   left: 25%;
 }
