--- a/UUJJ/static/css/city/city.css
+++ b/UUJJ/static/css/city/city.css
@@ -6,9 +6,7 @@ html {
    font-family: Arial, sans-serif;
    height: 100%;
    overflow: hidden;
-   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
-      url("../../img/mc.jpg") no-repeat center center fixed;
-   background-size: cover;
+   background: #FFE5E5;
 }
 
 /* Header styles */
