--- a/UUJJ/templates/city/city.html
+++ b/UUJJ/templates/city/city.html
@@ -30,7 +30,7 @@
                <div class="d-flex justify-content-center">
                   <div id="logo">
                      <a href="">
-                        <img src="{%static 'img/logo.png'%}" alt="logo" />
+                        <img src="{% static 'img/logo.png' %}" alt="logo" />
                      </a>
                   </div>
                </div>
@@ -72,7 +72,7 @@
                </div>
             </section>
             <!-- 발 -->
-            <footer>공발바닥</footer>
+            <footer></footer>
          </section>
       </section>
    </body>
