--- a/UUJJ/templates/main/main.html
+++ b/UUJJ/templates/main/main.html
@@ -61,7 +61,7 @@
                </div>
             </section>
             <!-- 발 -->
-            <footer>곰발바닥</footer>
+            <footer></footer>
          </section>
       </section>
    </body>
