--- a/UUJJ/static/css/city/city.css
+++ b/UUJJ/static/css/city/city.css
@@ -1,89 +1,115 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Jua&family=Telex&display=swap");
+
+
 /* Global settings */
 body,
 html {
-   margin: 0;
-   padding: 0;
-   font-family: Arial, sans-serif;
-   height: 100%;
-   overflow: hidden;
-   background: #FFE5E5;
+    margin: 0;
+    padding: 0;
+    font-family: "Jua", sans-serif !important;
+    height: 100%;
+    overflow: hidden;
+    font-style: normal;
+    background: #FFE5E5 !important;
 }
+
 
 /* Header styles */
 header {
-   height: 5vh;
-   color: #322f20;
-   padding: 10px 30px;
-   text-align: start;
-   display: flex;
-   align-items: center;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} 
+
+#logo img {
+    width: 5vw;
+}
+
+/* Main content styles */
+#main_con {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Map container */
 #map-container {
-   width: 100%;
-   height: 60vh;
-   display: flex;
-   justify-content: center;
+    width: 1200px;
+    height: 60vh;
+    display : flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+}
+
+#map-desc{
+    color: #eeeeee;
+    font-size: 1.5em;
+    margin: 20px;
 }
 
 /* Map styles */
 #map {
-   width: 60%;
-   height: 100%;
-   margin: 0 auto;
-   display: flex;
-   justify-content: center;
-   transform: scaleX(1.3); /* 가로로 1.5배 늘이기 */
+    width: 60%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    transform: scaleX(1.3); 
 }
 
 /* Button group */
 #bts {
-   display: flex;
-   height: 20vh;
-   justify-content: center;
-   align-items: center; /* Vertical center alignment */
-   padding: 20px;
+    display: flex;
+    height: 20vh;
+    justify-content: center;
+    align-items: center; 
+    padding: 20px;
 }
 
 /* Button images */
 #bts img {
-   margin: 0 30px;
-   width: 230px;
-   height: 230px;
-   cursor: pointer;
-   transition: transform 0.2s;
+    margin: 0 30px;
+    width: 230px;
+    height: 282px;
+    cursor: pointer;
+    transition: transform 0.2s;
 }
 
 #bts img:hover {
-   transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 /* Bottom line */
 #bt_line {
-   position: relative;
-   padding-bottom: 10px;
+    height: 5vh;
+    position: relative;
 }
 
 #bt_line::after {
-   content: "";
-   display: block;
-   width: 80%;
-   height: 6px;
-   background-color: #322f20;
-   position: absolute;
-   bottom: 0;
-   left: 50%;
-   transform: translateX(-50%);
-   border-radius: 3px;
+    content: "";
+    display: block;
+    width: 1200px;
+    height: 6px;
+    background-color: #7C7372;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 3px;
 }
 
 /* Footer styles */
 footer {
-   height: 5vh;
-   color: #322f20;
-   padding: 10px 30px;
-   text-align: center;
-   display: flex;
-   align-items: center;
+    height: 5vh;
+    color: #7C7372;
+    padding: 10px 30px;
+    text-align: center;
+    display: flex;
+    align-items: center;
 }
