--- a/UUJJ/templates/city/city.html
+++ b/UUJJ/templates/city/city.html
@@ -38,6 +38,7 @@
             <!-- 가슴 -->
             <section id="main_con">
                <div id="map-container">
+                  <div id = "map-desc">나의 유유자적하고픈 장소가 많은 곳은?</div>
                   <div id="map"></div>
                </div>
                <div id="bt_area">
