button Img Change

--- a/UUJJ/static/css/city/city.css
+++ b/UUJJ/static/css/city/city.css
@@ -6,7 +6,7 @@ html {
    font-family: Arial, sans-serif;
    height: 100%;
    overflow: hidden;
-   background: #FFE5E5;
+   background: #ffe5e5;
 }
 
 /* Header styles */
