--- a/UUJJ/templates/rank/rank.html
+++ b/UUJJ/templates/rank/rank.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Rank</title>
       <link rel="stylesheet" href="{%static 'css/bootstrap.css'%}" />
-      <link rel="stylesheet" href="{%static 'css/main/main.css'%}" />
+      <link rel="stylesheet" href="{%static 'css/rank/rank.css'%}" />
    </head>
    <body>
       <!-- 전체 크기 잡기 -->
@@ -76,5 +76,5 @@
          </section>
       </section>
    </body>
-   <script src="{% static 'js/main/main.js' %}"></script>
+   <!-- <script src="{% static 'js/main/main.js' %}"></script> -->
 </html>
