--- a/UUJJ/templates/main/main.html
+++ b/UUJJ/templates/main/main.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>main</title>
+      <title>mainmain</title>
       <link rel="stylesheet" href="{%static 'css/bootstrap.css'%}" />
       <link rel="stylesheet" href="{%static 'css/main/main.css'%}" />
    </head>
