--- a/UUJJ/templates/city/city.html
+++ b/UUJJ/templates/city/city.html
@@ -27,7 +27,13 @@
          var arboretumCityList = {{ arboretum_city_list|safe }};
          var saunaCityList = {{ sauna_city_list|safe }};
          var galleryCityList = {{ gallery_city_list|safe }};
+
+         var top5_spa = {{ top5_spa|safe }};
+         var top5_arboretum = {{ top5_arboretum|safe }};
+         var top5_sauna = {{ top5_sauna|safe }};
+         var top5_gallery = {{ top5_gallery|safe }};
       </script>
+
       <!-- 전체 크기 잡기 -->
       <section id="all-section" class="container-fluid">
          <!-- 중간 정렬 -->
