--- a/UUJJ/static/css/main/main.css
+++ b/UUJJ/static/css/main/main.css
@@ -3,26 +3,28 @@
 body {
    font-family: "Jua", sans-serif;
    font-style: normal;
-   background: #FFE5E5 !important;
-   font-size: 1.5em;
-
+   background: #fff3a8 !important;
+   font-size: 1.3em;
 }
 /* 전체 크기, 배경 효과 */
 #all-section {
    width: 100vw;
    height: 100vh;
-   background-size: cover;
-   background-position: center;
+   background-size: 100%;
+   background-position: bottom;
+   background-repeat: no-repeat;
+   /* background-position: center; */
+   background-image: url(../../img/background.png);
+}
+#middle_section {
+   background-color: rgba(100, 100, 100, 0.2);
+   height: 100vh;
 }
 /* 각 컨텐츠 크기 */
 /* 머리15 몸통70 카드5 발10 */
 header {
-   height: 10vh;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-} 
-
+   height: 15vh;
+}
 #main_con {
    height: 70vh;
 }
@@ -31,80 +33,67 @@ footer {
 }
 
 #card {
-   width: 20vw;
+   width: 25vw;
    height: 5vh;
-}
-#card {
    background-color: rgba(00, 00, 00, 50%);
    color: #eeeeee;
 }
+/* 헤더 콘텐츠 */
+#header-content {
+   width: 50vw;
+   max-width: 1360px;
+   position: relative;
+}
+/* 메뉴 */
+#menu_nav {
+   position: absolute;
+   margin-top: 3vh;
+}
+#menu_nav img {
+   height: 5vh;
+}
+#offcanvasWithBothOptions {
+   background-color: #fff3a8;
+}
+#menu_bt {
+   height: 20vh;
+}
 
 /* 로고/홈 버튼 */
+#logo {
+   margin-top: 2vh;
+}
 #logo img {
    width: 5vw;
 }
-
 /* 버튼 영역 및 호버 */
 #bt_area {
-   width: 820px;
-   height: 700px;
-   margin-top: 5vh;
+   max-width: 1360px;
    position: relative;
 }
 
-
 #bt_area > div {
-   transition: transform 0.4s ease;
-   width: 150px;
-   height: 150px;
+   transition: transform 0.6s ease;
+   position: relative;
 }
-
+#bt_img {
+   position: absolute;
+   z-index: 2;
+}
+#bt_img a {
+   height: 35vh;
+}
+#shadow {
+   position: absolute;
+   z-index: 1;
+}
 /* 호버 */
 #bt_area > div:hover {
-   transform: translateY(-30px);
+   transform: translateY(-40px);
 }
-
-
-/* div 위치*/
-#Arboretum {
-   z-index: 4;
-   left: 25%;
-   top: 25%;
+#bt_img img {
+   height: inherit;
 }
-#gallery {
-   z-index: 3;
-   left: 50%;
-   top: 10%;
-}
-#spa {
-   z-index: 2;
-   left: 0%;
-   top: 10%;
-}
-#sauna {
-   z-index: 1;
-   top: -5%;
-   left: 25%;
-}
-
-
-#Arboretum > a > img {
-   width: 400px;
-   height: 493px;
-   cursor: pointer;
-}
-#gallery > a > img {
-   width: 400px;
-   height: 493px;
-   cursor: pointer;
-}
-#spa > a > img {
-   width: 400px;
-   height: 493px;
-   cursor: pointer;
-}
-#sauna > a > img {
-   width: 400px;
-   height: 493px;
-   cursor: pointer;
+#Shadow > img {
+   height: 35vh;
 }
