--- a/UUJJ/static/css/rank/rank.css
+++ b/UUJJ/static/css/rank/rank.css
@@ -2,19 +2,23 @@
 /* 폰트 전역 설정 */
 body {
    font-family: "Jua", sans-serif;
-   font-weight: 500;
    font-style: normal;
+   background: #fff3a8 !important;
+   font-size: 1.3em;
 }
 /* 전체 크기, 배경 효과 */
 #all-section {
    width: 100vw;
    height: 100vh;
-   background-size: cover;
-   background-position: center;
+   background-size: 100%;
+   background-position: bottom;
+   background-repeat: no-repeat;
+   /* background-position: center; */
    background-image: url(../../img/background.png);
 }
 #middle_section {
-   background-color: rgba(00, 00, 00, 50%);
+   background-color: rgba(100, 100, 100, 0.2);
+   height: 100vh;
 }
 /* 각 컨텐츠 크기 */
 /* 머리15 몸통70 카드5 발10 */
@@ -26,4 +30,108 @@ header {
 }
 footer {
    height: 10vh;
+}
+#header-content {
+   width: 50vw;
+   max-width: 1360px;
+   position: relative;
+}
+#Ranking_board {
+   height: 50vh;
+}
+#Ranking_bt {
+   height: 20vh;
+}
+#menu_nav {
+   position: absolute;
+   margin-top: 3vh;
+}
+#menu_nav img {
+   height: 5vh;
+}
+#offcanvasWithBothOptions {
+   background-color: #fff3a8;
+}
+#menu_bt {
+   height: 20vh;
+}
+
+/* 로고/홈 버튼 */
+#logo {
+   margin-top: 2vh;
+}
+#logo img {
+   width: 5vw;
+}
+
+/* 보드 영역 */
+#card_title {
+   width: 25vw;
+   height: 5vh;
+   background-color: rgba(00, 00, 00, 50%);
+   color: #eeeeee;
+}
+#board_area {
+   width: 50vw;
+   max-width: 1360px;
+   height: 40vh;
+   background-color: #00000040;
+   font-size: 0.6em;
+   scrollbar-width: none;
+   overflow-x: auto; /* 수평 스크롤 활성화 */
+   overflow-y: hidden; /* 수직 스크롤 비활성화 */
+   cursor: grab; /* 드래그 가능한 커서 표시 */
+   white-space: nowrap; /* 아이템들이 줄바꿈되지 않고 한 줄로 표시되도록 */
+   border-radius: 15px;
+   box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+#board_area.active {
+   cursor: grabbing; /* 드래그 중일 때의 커서 표시 */
+}
+#board_content {
+   display: flex;
+}
+#board_item {
+   display: inline-block; /* 각 아이템들이 인라인 블록처럼 표시되도록 */
+   /* 아이템 간의 간격 조정 */
+   padding: 1em;
+   /* margin: 1em; */
+}
+#board_card {
+   user-select: none; /* 텍스트 선택을 비활성화 */
+   width: 190px;
+   height: 100%;
+}
+#board_card > a {
+   padding: 10%;
+}
+/* 버튼 영역 및 호버 */
+#bt_area {
+   max-width: 1360px;
+   position: relative;
+}
+#bt_area > div {
+   transition: transform 0.6s ease;
+   position: relative;
+}
+#bt_img {
+   position: absolute;
+   z-index: 2;
+}
+#bt_img a {
+   height: 25vh;
+}
+#shadow {
+   position: absolute;
+   z-index: 1;
+}
+/* 호버 */
+#bt_area > div:hover {
+   transform: translateY(-20px);
+}
+#bt_img img {
+   height: inherit;
+}
+#Shadow > img {
+   height: 25vh;
 }
