--- a/UUJJ/static/css/rank/rank.css
+++ b/UUJJ/static/css/rank/rank.css
@@ -3,6 +3,7 @@
 body {
    font-family: "Jua", sans-serif;
    font-style: normal;
+   background: #F8E8AD !important;
    font-size: 1.3em;
 }
 /* 전체 크기, 배경 효과 */
