main,citiy interlock

--- a/UUJJ/static/css/main/main.css
+++ b/UUJJ/static/css/main/main.css
@@ -3,7 +3,7 @@
 body {
    font-family: "Jua", sans-serif;
    font-style: normal;
-   background: #F8E8AD !important;
+   background: #f8e8ad !important;
    font-size: 1.3em;
 }
 
@@ -21,12 +21,11 @@ body {
    height: 100vh;
 }
 /* 각 컨텐츠 크기 */
-/* 머리15 몸통70 카드5 발10 */
 header {
-   height: 15vh;
+   height: 10vh;
 }
 #main_con {
-   height: 70vh;
+   height: 75vh;
 }
 footer {
    height: 10vh;
@@ -70,13 +69,16 @@ footer {
 }
 /* 버튼 영역 및 호버 */
 #bt_area {
-   max-width: 1360px;
+   width: 640px;
+   height: 480px;
    position: relative;
 }
 
 #bt_area > div {
+   width: 320px;
+   height: 320px;
    transition: transform 0.6s ease;
-   position: relative;
+   position: absolute;
 }
 #bt_img {
    position: absolute;
@@ -98,4 +100,25 @@ footer {
 }
 #Shadow > img {
    height: 35vh;
+}
+
+/* z-index */
+#Arboretum {
+   z-index: 4;
+   left: 160px;
+   bottom: 0;
+}
+#gallery {
+   z-index: 3;
+   right: 0;
+   bottom: 80px;
+}
+#spa {
+   z-index: 2;
+   left: 0;
+   bottom: 85px;
+}
+#sauna {
+   z-index: 1;
+   right: 160px;
 }
